fixed icon spacing, fixes #12 not increasing size for now

--- a/less/extension.less
+++ b/less/extension.less
@@ -13,7 +13,7 @@
     pointer-events: auto;
 
     .Badge {
-        margin-left: -10px;
+        margin-left: -5px;
         position: relative;
         pointer-events: auto;
 
